# plugin-urgence

./: .gitignore  README.md  demo.py  pyproject.toml  report.py  requirements.txt  setup.ps1  setup.sh
.claude-plugin/: marketplace.json  plugin.json
agents/: urgentiste.md
commands/: urgence.md
skills/fr-characterize-zone/: SKILL.md  characterize.py
skills/fr-geocode/: SKILL.md  geocode.py
skills/fr-georisques/: SKILL.md  georisques.py
skills/fr-georisques/references/: api.md  codes_gaspar.md  interpretation.md  output_format.md
skills/fr-health-alerts/: SKILL.md  health_alerts.py
skills/fr-locate-infra/: SKILL.md  locate_infra.py
skills/fr-route/: SKILL.md  route.py
skills/fr-sentinelles/: SKILL.md  sentinelles.py
skills/fr-vigicrues/: SKILL.md  vigicrues.py
skills/fr-water-access/: SKILL.md  water_access.py
skills/fr-weather-alerts/: SKILL.md  weather_alerts.py
